fixed some bags